💄 Correction bugs minimes version mobile

--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -82,6 +82,9 @@ header { padding: 20px 5%; }
 /* ___ HOME MAIN ELEMENT */
 .first-child { height: 95%; background-image: url("/img/background"); background-size: cover; }
 .home__main { background-color: var(--backgroud-main); height: 100vh; overflow: hidden; }
+@media screen and (max-height: 590px) {
+    .home__main-container { padding-top: 5%!important; }
+}
 .home__main-container { padding-left: 12%; padding-top: 10.5% }
 .home__main-container .title { font-size: 35px; font-weight: bold; }
 .home__main-container .subtitle, .home__main-container .subtitle i { font-size: 22px; color: var(--text-second) }
@@ -103,7 +106,9 @@ header { padding: 20px 5%; }
     color: var(--text);
     border: 2px solid var(--text-second);
 }
-.second-button:hover, .second-button:hover .fa-play { color: var(--backgroud-main); background-color: var(--text-second) }
+.second-button:hover, .second-button:hover .fa-play {
+    color: var(--backgroud-main); background-color: var(--text-second)
+}
 .second-button .fa-play { font-size: 15px; margin-left: 15px; margin-right: -10px; }
 
 .home__main-bottom {
